k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myweb
  annotations:
      argocd.argoproj.io/sync-wave: "0"
