k8s/05_web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myweb-app
  namespace: myweb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myweb-app
  template:
    metadata:
      labels:
        app: myweb-app
    spec:
      containers:
        - name: django-web
          image: yeonilyoo/django-web:0549c2d
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: myweb-app
  namespace: myweb
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: myweb-app
