k8s/07_nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myweb-nginx
  namespace: myweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myweb-nginx
  template:
    metadata:
      labels:
        app: myweb-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          resources:
            limits:
              cpu: "0.5"
              memory: "256Mi"
      volumes:
        - name: nginx-config
          configMap:
            name: myweb-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: myweb-nginx
  namespace: myweb
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: myweb-nginx
