k8s/08_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myweb-ingress
  namespace: myweb
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - myweb.example.com
      secretName: myweb-ssl
  rules:
    - host: myweb.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myweb-nginx
                port:
                  number: 80
